@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.7.28) unstable; urgency=low
 
   * fcgi-client: support response status
   * translate: malformed packets are fatal
+  * http-cache: don't cache resources with very long URIs
 
  --
 
